--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "axios-hooks": "^5.1.0",
+    "motion": "^12.0.6",
+    "prop-types": "^15.8.1",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2",
     "redux-persist": "^6.0.0"
