--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "axios-hooks": "^5.1.0",
+    "crypto-js": "^4.2.0",
     "motion": "^12.0.6",
     "prop-types": "^15.8.1",
     "query-string": "^9.1.1",
