--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "axios-hooks": "^5.1.0",
     "crypto-js": "^4.2.0",
